Migrate Android tests from instrumented tests to Robolectric. Upgrade libraries' and Kotlin's version Move test code from sqllin-driver-test back to sqllin-driver